--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Sample Landing Page</title>
-        <link rel="stylesheet" type="text/css" href="index.css" />
         <link href="https://fonts.googleapis.com/css?family=Anton|Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="index.css" />
     <body>
-        <div class="container">
+        <div class="header-container">
             <div class="left">
                 <h1>COREY<br/>LEVITAN</h1>
                 <div class="video-container">
@@ -18,6 +22,111 @@
                 <a target="#">ARTICLES</a>
                 <a target="#">MULTIMEDIA</a>
                 <a target="#">CONTACT</a>
+            </div>
+        </div>
+        <div class="article">
+            <div class="container">
+                <div class="row row-cols-3">
+                    <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <img src="imgs/02.jpg" class="card-img-top"/>
+                            <div class="card-body">
+                                <h4 class="card-title">LOUSE-Y JOB: Back to school at La Jolla’s Hair Fairies</h4>
+                                <p>July 24, 2019 | La Jolla Light</p>
+                                <p class="card-text">The comb I’m running through the hair of a 7-year-old boy has two sesame seeds on it. Both are dark brown and moving.<br/>(Read More)</p>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <img src="imgs/01.jpg" class="card-img-top" />
+                            <div class="card-body">
+                                <h4 class="card-title">Scoot Yourself: La Jolla Light reporter takes test roll on an electric scooter</h4>
+                                <p>August 21, 2019 | La Jolla Light</p>
+                                <p class="card-text">On the afternoon of Wednesday, July 17, a nervous middle-aged man engaged in alternating fits of screaming ecstasy and profanity while scooting around The Village at 15 miles per hour.<br/>(Read More)</p>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <img src="imgs/03.jpg" class="card-img-top" />
+                            <div class="card-body">
+                                <h4 class="card-title">BAPTISM BY GUNFIRE: Program gives public quasi-realistic taste of San Diego Police work</h4>
+                                <p>April 17, 2019 | La Jolla Light</p>
+                              <p class="card-text">The suspect has been engaged by my partner and me. In the white sedan stopped in front of us is a male who matches the description of someone who<br/>(Read More)</p>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <img src="imgs/04.jpg" class="card-img-top" />
+                            <div class="card-body">
+                                <h4 class="card-title">Scoot Yourself: La Jolla Light reporter takes test roll on an electric scooter</h4>
+                                <p>July 24, 2019 | La Jolla Light</p>
+                              <p class="card-text">On the afternoon of Wednesday, July 17, a nervous middle-aged man engaged in alternating fits of screaming ecstasy and profanity while scooting around The Village at 15 miles per hour.<br/>(Read More)</p>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <img src="imgs/05.jpg" class="card-img-top" />
+                            <div class="card-body">
+                                <h4 class="card-title">Scoot Yourself: La Jolla Light reporter takes test roll on an electric scooter</h4>
+                                <p>July 24, 2019 | La Jolla Light</p>
+                              <p class="card-text">On the afternoon of Wednesday, July 17, a nervous middle-aged man engaged in alternating fits of screaming ecstasy and profanity while scooting around The Village at 15 miles per hour.<br/>(Read More)</p>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <img src="imgs/06.jpg" class="card-img-top" />
+                            <div class="card-body">
+                                <h4 class="card-title">Scoot Yourself: La Jolla Light reporter takes test roll on an electric scooter</h4>
+                                <p>July 24, 2019 | La Jolla Light</p>
+                              <p class="card-text">On the afternoon of Wednesday, July 17, a nervous middle-aged man engaged in alternating fits of screaming ecstasy and profanity while scooting around The Village at 15 miles per hour.<br/>(Read More)</p>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <img src="imgs/07.jpg" class="card-img-top" />
+                            <div class="card-body">
+                                <h4 class="card-title">Scoot Yourself: La Jolla Light reporter takes test roll on an electric scooter</h4>
+                                <p>July 24, 2019 | La Jolla Light</p>
+                              <p class="card-text">On the afternoon of Wednesday, July 17, a nervous middle-aged man engaged in alternating fits of screaming ecstasy and profanity while scooting around The Village at 15 miles per hour.<br/>(Read More)</p>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <img src="imgs/08.jpg" class="card-img-top" />
+                            <div class="card-body">
+                                <h4 class="card-title">Scoot Yourself: La Jolla Light reporter takes test roll on an electric scooter</h4>
+                                <p>July 24, 2019 | La Jolla Light</p>
+                              <p class="card-text">On the afternoon of Wednesday, July 17, a nervous middle-aged man engaged in alternating fits of screaming ecstasy and profanity while scooting around The Village at 15 miles per hour.<br/>(Read More)</p>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <img src="imgs/09.jpg" class="card-img-top" />
+                            <div class="card-body">
+                                <h4 class="card-title">Scoot Yourself: La Jolla Light reporter takes test roll on an electric scooter</h4>
+                                <p>July 24, 2019 | La Jolla Light</p>
+                              <p class="card-text">On the afternoon of Wednesday, July 17, a nervous middle-aged man engaged in alternating fits of screaming ecstasy and profanity while scooting around The Village at 15 miles per hour.<br/>(Read More)</p>
+                            </div>
+                          </div>
+                      </div>
+                </div>
+            </div>
+            <div class="sidebar">
+                <h3>As Seen In ...</h3>
+                <p>La Jolla Light</p>
+                <p>Las Vegas Review</p>
+                <p>Men's Health</p>
+                <p>New York Post</p>
+                <p>Playboy</p>
+                <p>The Saturday Evening Post</p>
             </div>
         </div>
     </body>
